--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -98,7 +98,7 @@
 {
   "name": "t:sections.rich-text.name",
   "tag": "section",
-  "class": "section",
+  "class": "section section--rich-text",
   "disabled_on": {
     "groups": ["header", "footer"]
   },
@@ -163,7 +163,7 @@
       "type": "range",
       "id": "padding_top",
       "min": 0,
-      "max": 100,
+      "max": 200,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_top",
@@ -173,7 +173,7 @@
       "type": "range",
       "id": "padding_bottom",
       "min": 0,
-      "max": 100,
+      "max": 200,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
