--- a/assets/main.css
+++ b/assets/main.css
@@ -8,3 +8,11 @@
     padding-left: 68px;
   }
 }
+
+.section--rich-text .rich-text__wrapper .rich-text__caption {
+  color: #E87E3F;
+}
+.section--rich-text .rich-text__wrapper .rich-text__heading {
+  margin-top: 0px;
+  line-height: normal;
+}
