--- a/src/scss/sections/multirow.scss
+++ b/src/scss/sections/multirow.scss
@@ -18,4 +18,20 @@
             }
         }
     }
+
+    .image-with-text__content{
+        @media screen and (max-width: 768px) {
+            padding-block: 32px 35px;
+        }
+
+        .image-with-text__text {
+            margin-top: 25px;
+            font-size: 36px;
+            line-height: normal;
+            @media screen and (max-width: 768px) {
+                margin-top: 20px;
+                font-size: 18px;
+            }
+        }
+    }
 }
